--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,28 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <parallel>methods</parallel>
+                    <threadCount>1</threadCount>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
         </plugins>
@@ -24,7 +42,7 @@
         <maven.compiler.target>1.11</maven.compiler.target>
         <maven.compiler.source>1.11</maven.compiler.source>
         <slf4jVersion>2.0.7</slf4jVersion>
-        <maven.jar.plugin.version>2.5</maven.jar.plugin.version>
+<!--        <maven.jar.plugin.version>2.5</maven.jar.plugin.version>-->
         <powermock.version>1.7.1</powermock.version>
         <maven.shade>3.1.0</maven.shade>
         <src.dir>/src</src.dir>
@@ -93,7 +111,5 @@
       <artifactId>log4j-core</artifactId>
       <version>2.20.0</version>
     </dependency>
-
-
   </dependencies>
 </project>
